fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,8 @@ h2{
     color:rgb(24,35,67);
     font-weight: bolder;
 }
+.box{
+    width:110%
+    
+}
+
